Sending message from content_script to background

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,9 @@
   },
   "permissions": [
     "tabs", "http://*/*", "bookmarks"
-  ]
+  ],
+  "background": {
+      "scripts": ["eventPage.js"],
+      "persistent": false
+  }
 }
