--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "tabs", "http://*/*","https://*/*", "bookmarks"
+    "tabs", "http://*/*","https://*/*", "bookmarks", "storage"
   ],
   "background": {
       "scripts": ["eventPage.js"],
