--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,15 @@
   "name": "AddBookmark",
   "version": "0.1",
   "manifest_version": 2,
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+            "128": "icon128.png" },
   "description": "A smarter 'Add Bookmark' button",
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": {
+             "19": "icon19.png",
+             "38": "icon38.png"
+    },
     "default_popup": "popup.html"
   },
   "permissions": [
