--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     "tabs", "http://*/*","https://*/*", "bookmarks", "storage"
   ],
   "background": {
-      "scripts": ["naivebayes.nodep.min.js", "eventPage.js"],
+      "scripts": ["naivebayes.nodep.js", "eventPage.js"],
       "persistent": false
   }
 }
